# crystal-chain-ble-mesh

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crystal_mesh_ledger/: __init__.py  compact.py  ledger.py  localization.py  sim.py  wire.py
docs/: AUDIT_HARDENING_RESPONSE_V0.md  COMPACT_WIRE_CODEC_V0.md  CRYSTAL_LOCALIZATION_GRADIENT_V0.md  CRYSTAL_MESH_LEDGER_V0.md  CRYSTAL_WALLETS_TOKENS_V0.md
results/: crystal_localization_gradient.json  crystal_localization_gradient.md  crystal_mesh_ledger_sim.json  crystal_mesh_ledger_sim.md
scripts/: run_crystal_localization_gradient.py  run_crystal_mesh_ledger_sim.py
tests/: test_mesh_ledger_sim.py
